// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BankCard desktop className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        4390
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard desktop issuer 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_tinkoff-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        9876
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard desktop number 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcBankCard YpcBankCard_view_vertical YpcBankCard_size_compact"
>
  <div
    className="YpcBankCard-Icons"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
    />
  </div>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_vertical YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        5432
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard desktop paySystem 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Mastercard
    </h4>
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        1234
      </span>
    </h4>
  </div>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_mastercard-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
  />
</article>
`;

exports[`BankCard desktop size bulky 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_bulky"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_3xl YpcIcon_name_unknown-bank YpcIcon_fulled YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcCardNumber YpcCardNumber_size_bulky YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_bulky"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_bulky"
      >
        1234
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard desktop size compact 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        1234
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard desktop view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        1234
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard desktop view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcBankCard YpcBankCard_view_vertical YpcBankCard_size_compact"
>
  <div
    className="YpcBankCard-Icons"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
    />
  </div>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_vertical YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        1234
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard touch-phone className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        4390
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard touch-phone issuer 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_tinkoff-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        9876
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard touch-phone number 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        5432
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard touch-phone paySystem 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Mastercard
    </h4>
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        1234
      </span>
    </h4>
  </div>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_mastercard-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
  />
</article>
`;

exports[`BankCard touch-phone size bulky 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
  size="bulky"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        1234
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard touch-phone size compact 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
  size="compact"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        1234
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard touch-phone view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        1234
      </span>
    </h4>
  </div>
</article>
`;

exports[`BankCard touch-phone view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    
    <h4
      className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
    >
      <span
        className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
      >
        1234
      </span>
    </h4>
  </div>
</article>
`;
